<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_searchview"
        android:title="@string/searchname"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="300"
        android:title="@string/sort_by">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_name_asc"
                    android:title="@string/sort_by_name_a_z" />
                <item
                    android:id="@+id/sort_name_desc"
                    android:title="@string/sort_by_name_z_a" />
                <item
                    android:id="@+id/sort_date_asc"
                    android:title="@string/sort_by_date_ask" />
                <item
                    android:id="@+id/sort_date_desc"
                    android:title="@string/sort_by_date_desc" />
            </group>
        </menu>
    </item>


</menu>